--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wordle-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/tim19889/mywordle",
+  "homepage": "https://tim19889.github.io/mywordle2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
